# SuperKMeans

./: .gitignore  .gitmodules  BENCHMARKING.md  CMakeLists.txt  CONTRIBUTING.md  INSTALL.md  README.md  bench.cpp  bench_gen.py  bench_kernels.cpp  bench_kmeans.cpp  bench_kmeans_faiss.cpp  bench_kmeans_faiss.py  bench_kmeans_lorann.cpp  bench_kmeans_scikit.py  bench_pdxearch_utils.cpp  hist_helper.py  pyproject.toml  test_assign.cpp  test_unrotate.cpp
benchmarks/: CMakeLists.txt  ad_hoc_superkmeans.cpp  bench_kmeans  bench_kmeans.cpp  bench_kmeans_faiss.cpp  bench_kmeans_scikit.py  bench_real_datasets  bench_real_datasets.cpp  bench_superkmeans.cpp  bench_utils.h  bench_utils.py  early_termination.sh  early_termination_faiss.cpp  early_termination_scikit.py  early_termination_superkmeans.cpp  elkan.py  elkan.sh  end_to_end.sh  end_to_end_faiss.cpp  end_to_end_fastkmeans.py  end_to_end_scikit.py  end_to_end_superkmeans.cpp  iters_scikit.py  iters_scikit.sh  microbenchmark_flip_sign.cpp  microbenchmark_horizontal_kernels.cpp  microbenchmark_init_positions_array.cpp  pareto_superkmeans.cpp  pruning_bailout_analysis_superkmeans.cpp  sampling_superkmeans.cpp  scalability.sh  setup_data.py  setup_ground_truth.py  sweet_pruning_spot_superkmeans.cpp  test_dct_rotation_correctness.cpp  varying_k.sh  varying_k_faiss.cpp  varying_k_fastkmeans.py  varying_k_scikit.py  varying_k_superkmeans.cpp
benchmarks/results/: plotter_sampling.ipynb
benchmarks/results/default/: early_termination.csv  end_to_end.csv  iters_scikit.csv  sampling.csv  sweet_pruning_spot.csv  varying_k.csv
benchmarks/results/graniterapids/: early_termination.csv  end_to_end.csv  pareto.csv  sampling.csv  scalability.csv  varying_k.csv
benchmarks/results/graviton4/: varying_k.csv
benchmarks/results/intel/: sampling.csv  varying_k.csv
benchmarks/results/m4/: end_to_end.csv
benchmarks/results/zen3/: varying_k.csv
benchmarks/results/zen5/: varying_k.csv
examples/: CMakeLists.txt  README.md  simple_clustering.cpp
include/superkmeans/: common.h  profiler.h  profiler.hpp  superkmeans.h
include/superkmeans/distance_computers/: avx2_computers.h  avx2_computers.hpp  avx512_computers.h  base_computers.h  batch_computers.h  batch_computers.hpp  neon_computers.h  scalar_computers.h  scalar_computers.hpp
include/superkmeans/pdx/: adsampling.h  layout.h  pdx_ivf.h  pdxearch.h  utils.h
include/superkmeans/pdx/index_base/: pdx_ivf.hpp  pdx_ivf2.hpp
include/superkmeans/pdx/pruners/: adsampling.hpp  bond.hpp
python/bindings/: bindings.cpp
python/superkmeans/: __init__.py
python/tests/: test_superkmeans.py
tests/: CMakeLists.txt  generate_wcss_ground_truth.cpp  test_assign  test_assign.cpp  test_superkmeans  test_superkmeans.cpp  test_unrotate  test_unrotate.cpp  test_wcss.cpp
